--- a/California_predict-Copy1.ipynb
+++ b/California_predict-Copy1.ipynb
@@ -1222,8 +1222,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "id": "117f43c2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "pickle.dump(scaler,open('scaling.pkl','wb'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ddb93656",
    "metadata": {},
    "outputs": [],
    "source": []
